Tue Oct 19 12:02:04 2004  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/Protocols/sender.cpp:

          Modified the to_seconds() function to always use the
          ACE_UINT64_DBLCAST_ADAPTER macro.  The macro should work in all
          cases including vc6.

Mon Oct 18 13:45:21 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Wait_Never.cpp:

          Modification to allow Mcast connections to process upcalls.

Mon Oct 18 18:28:23 2004  Olli Savia  <ops@iki.fi>

        * orbsvcs/orbsvcs/AV/AV_Core.cpp:
        * orbsvcs/orbsvcs/AV/sfp.cpp:
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/distributer.cpp:
        * orbsvcs/tests/AVStreams/Asynch_Three_Stage/sender.cpp:
        * orbsvcs/tests/AVStreams/Bidirectional_Flows/receiver.cpp:
        * orbsvcs/tests/AVStreams/Bidirectional_Flows/sender.cpp:
        * orbsvcs/tests/AVStreams/Component_Switching/distributer.cpp:
        * orbsvcs/tests/AVStreams/Component_Switching/sender.cpp:
        * orbsvcs/tests/AVStreams/Full_Profile/ftp.cpp:
        * orbsvcs/tests/AVStreams/Full_Profile/server.cpp:
          Added explicit static template member instantiations.

Sat Oct 16 18:40:59 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/Logging_Service/Basic_Logging_Service/README:
        * orbsvcs/Logging_Service/Event_Logging_Service/README:
        * orbsvcs/Logging_Service/Notify_Logging_Service/README:
        * orbsvcs/Logging_Service/RTEvent_Logging_Service/README:

          Convert from DOS to UNIX text format.

Sat Oct 16 13:22:54 MST 2004 Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:
          ImR_Activator project changed to not be built when
          the ImR_Activator_IDL prerequisites are not built.

Fri Oct 15 20:37:19 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * tao/Synch_Invocation.cpp:
        * tao/Messaging/Asynch_Invocation.cpp:
