@@ -79,7 +79,10 @@ RPS_Monitor::loads (ACE_ENV_SINGLE_ARG_DECL)
   load_list->length (1);
 
   load_list[0].id = CosLoadBalancing::RequestsPerSecond;
-  load_list[0].value = request_count / elapsed_time.msec () * 1000;
+  
+  // VC 7.1 gives a warning without an explicit cast.
+  load_list[0].value =
+    static_cast<CORBA::Float> (request_count / elapsed_time.msec () * 1000);
 
   // Strictly for debugging or
   ACE_DEBUG ((LM_DEBUG, "%f\n", load_list[0].value));
